--- a/src/app/transactions/fee-paid-management/fee-paid-management.component.html
+++ b/src/app/transactions/fee-paid-management/fee-paid-management.component.html
@@ -59,7 +59,7 @@
     </mat-card>
   </mat-card-content>
   <mat-accordion>
-    <mat-expansion-panel expanded="true" (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+    <mat-expansion-panel expanded="false" (opened)="panelOpenState = true" (closed)="panelOpenState = false">
       <mat-expansion-panel-header>
         <mat-panel-title> Xem theo </mat-panel-title>
       </mat-expansion-panel-header>
@@ -159,6 +159,12 @@
       <ng-container matColumnDef="txnDate">
         <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Ngày /<br />Mã giao dịch</th>
         <td mat-cell fxHide fxShow.gt-md *matCellDef="let transaction">
+            <span [ngSwitch]="getDataOfGroupTxnCode(transaction)[0].status">
+              <img *ngSwitchCase="'C'" src="assets/images/icons/check.svg" />
+              <img *ngSwitchCase="'A'" src="assets/images/icons/pending.svg" />
+              <img *ngSwitchCase="'V'" src="assets/images/icons/cancel.svg" />
+              <img *ngSwitchDefault src="assets/images/icons/question.svg" />
+            </span>
           {{ getDataOfGroupTxnCode(transaction)[0].txnDate | date: "dd-MM-yyyy HH:mm:ss" }} <br />
           {{ getDataOfGroupTxnCode(transaction)[0].txnCode }}
         </td>
@@ -174,7 +180,7 @@
       <ng-container matColumnDef="txnType">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Loại GD</th>
         <td mat-cell *matCellDef="let transaction" [ngSwitch]="getDataOfGroupTxnCode(transaction)[0].txnType">
-          <button *ngSwitchCase="'CASH'" style="background: #ffca00; color: white" mat-button class="btn btn-success">
+          <button *ngSwitchCase="'CASH'" style="background: green; color: white" mat-button class="btn btn-success">
             RTM
           </button>
           <button
