--- a/src/app/transactions/manage-transaction/manage-transaction.component.scss
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.scss
@@ -71,3 +71,26 @@ tr.example-detail-row {
   padding: 8px;
   color: white;
 }
+.red_text {
+  color: red;
+  font-weight: bold;
+  word-wrap: break-word;
+
+}
+.blue_text {
+  color: blue;
+  font-weight: bold;
+  word-wrap: break-word;
+
+}
+.green_text {
+  color: green;
+  font-weight: bold;
+  word-wrap: break-word;
+
+}
+
+th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
+  padding: 5px 10px;
+
+}
