--- a/src/app/shared/user-account-info/user-account-info.component.scss
+++ b/src/app/shared/user-account-info/user-account-info.component.scss
@@ -8,9 +8,7 @@
   }
 }
 .aligned-with-icons{
-  position: absolute;
-  margin-top: 20px;
-  margin-left: -25px; /* optional */
+  font-size: medium;
 }
 .mat-menu-panel{
   max-width: none !important;
