--- a/src/app/groups/groups-view/general-tab/general-tab.component.html
+++ b/src/app/groups/groups-view/general-tab/general-tab.component.html
@@ -1,72 +1,124 @@
 <div class="tab-container mat-typography">
 
-  <h3>Group Details</h3>
+  <h3>{{'Group_Component.General_tab.GroupDetails' |translate}}</h3>
 
   <div fxLayout="row" fxLayoutGap="32px" class="group-details-container m-b-30">
     <p>
-      Active Client Loans: {{groupSummary?.activeClientLoans}}<br/>
-      Active Client Borrowers: {{groupSummary?.activeClientBorrowers}}<br/>
-      Active Overdue Client Loans: {{groupSummary?.overdueClientLoans}}<br/>
+      {{'Group_Component.General_tab.ActiveClientLoans' |translate}}: {{groupSummary?.activeClientLoans}}<br/>
+      {{'Group_Component.General_tab.ActiveClientBorrowers' |translate}}: {{groupSummary?.activeClientBorrowers}}<br/>
+      {{'Group_Component.General_tab.ActiveOverdueClientLoans' |translate}}: {{groupSummary?.overdueClientLoans}}<br/>
     </p>
     <p>
-      Active Group Loans: {{groupSummary?.activeGroupLoans}}<br/>
-      Active Group Borrowers: {{groupSummary?.activeGroupBorrowers}}<br/>
-      Active Overdue Group Loans: {{groupSummary?.overdueGroupLoans}}<br/>
+      {{'Group_Component.General_tab.ActiveGroupLoans' |translate}}: {{groupSummary?.activeGroupLoans}}<br/>
+      {{'Group_Component.General_tab.ActiveGroupBorrowers' |translate}}: {{groupSummary?.activeGroupBorrowers}}<br/>
+      {{'Group_Component.General_tab.ActiveOverdueGroupLoans' |translate}}: {{groupSummary?.overdueGroupLoans}}<br/>
     </p>
     <p>
-      Active Clients: {{groupSummary?.activeClients}}<br/>
+      {{'Group_Component.General_tab.ActiveClients' |translate}}: {{groupSummary?.activeClients}}<br/>
     </p>
   </div>
 
   <!-- Client Members Table -->
   <div *ngIf="groupClientMembers">
+     
+    <h3>{{'Group_Component.General_tab.ClientMembers' |translate}}</h3>
+    <div class="fix-table-client">
+      <div fxLayout fxLayoutAlign="start center">
+        <mat-form-field fxFlex="40%">
+          <input matInput type="text" (keyup)="doFilterGroupClientMembersSameOffice($event.target.value)" placeholder="Filter">
+        </mat-form-field>
+      </div>
 
-    <h3>Client Members</h3>
+      <table mat-table [dataSource]="groupClientMembersSameOffice"
+        class="mat-elevation-z1 m-b-30">
 
-    <table mat-table [dataSource]="groupClientMembers"
-      class="mat-elevation-z1 m-b-30">
+        <ng-container matColumnDef="Name">
+          <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.Name' |translate}} </th>
+          <td mat-cell *matCellDef="let element">
+            <i class="fa fa-stop" [ngClass]="element.status.code|statusLookup" [matTooltip]="element.status.value"></i>
+            {{element.displayName}}
+          </td>
+        </ng-container>
 
-      <ng-container matColumnDef="Name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element">
-          <i class="fa fa-stop" [ngClass]="element.status.code|statusLookup" [matTooltip]="element.status.value"></i>
-          {{element.displayName}}
-        </td>
-      </ng-container>
+        <ng-container matColumnDef="Account No">
+          <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.AccountNo.' |translate}} </th>
+          <td mat-cell *matCellDef="let element"> {{element.accountNo}} </td>
+        </ng-container>
 
-      <ng-container matColumnDef="Account No">
-        <th mat-header-cell *matHeaderCellDef> Account No. </th>
-        <td mat-cell *matCellDef="let element"> {{element.accountNo}} </td>
-      </ng-container>
+        <ng-container matColumnDef="Office">
+          <th mat-header-cell *matHeaderCellDef>{{'Group_Component.General_tab.Office' |translate}} </th>
+          <td mat-cell *matCellDef="let element"> {{element.officeName}} </td>
+        </ng-container>
 
-      <ng-container matColumnDef="Office">
-        <th mat-header-cell *matHeaderCellDef> Office </th>
-        <td mat-cell *matCellDef="let element"> {{element.officeName}} </td>
-      </ng-container>
+        <ng-container matColumnDef="JLG Loan Application">
+          <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.CustomerDetails' |translate}}  </th>
+          <td mat-cell *matCellDef="let element">
+            <div class="m-l-30" *ngIf="element.status.code !== 'clientStatusType.closed'">
+              <button class="account-action-button" mat-raised-button color="primary">
+                <i class="fa fa-eye" matTooltip="{{'Group_Component.General_tab.NewLoanApplication' |translate}}"></i>
+              </button>
+            </div>
+          </td>
+        </ng-container>
 
-      <ng-container matColumnDef="JLG Loan Application">
-        <th mat-header-cell *matHeaderCellDef> JLG Loan Application </th>
-        <td mat-cell *matCellDef="let element">
-          <div class="m-l-30" *ngIf="element.status.code !== 'clientStatusType.closed'">
-            <button class="account-action-button" mat-raised-button color="primary">
-              <i class="fa fa-plus" matTooltip="New Loan Application"></i>
-            </button>
-          </div>
-        </td>
-      </ng-container>
+        <tr mat-header-row *matHeaderRowDef="clientMemberColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: clientMemberColumns;" [routerLink]="['/clients', row.id, 'general']" class="select-row"></tr>
 
-      <tr mat-header-row *matHeaderRowDef="clientMemberColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: clientMemberColumns;" [routerLink]="['/clients', row.id, 'general']" class="select-row"></tr>
+      </table>
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    </div>
 
-    </table>
+    <div class="fix-table1-client">
+      <div fxLayout fxLayoutAlign="start center">
+        <mat-form-field fxFlex="40%">
+          <input matInput type="text" (keyup)="doFilterGroupClientMembersDiffidentOffice($event.target.value)" placeholder="Filter">
+        </mat-form-field>
+      </div>
+      <table mat-table [dataSource]="groupClientMembersDiffidentOffice"
+        class="mat-elevation-z1 m-b-30 ">
+
+        <ng-container matColumnDef="Name">
+          <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.Name' |translate}} </th>
+          <td mat-cell *matCellDef="let element">
+            <i class="fa fa-stop" [ngClass]="element.status.code|statusLookup" [matTooltip]="element.status.value"></i>
+            {{element.displayName}}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="Account No">
+          <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.AccountNo.' |translate}} </th>
+          <td mat-cell *matCellDef="let element"> {{element.accountNo}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="Office">
+          <th mat-header-cell *matHeaderCellDef>{{'Group_Component.General_tab.Office' |translate}} </th>
+          <td mat-cell *matCellDef="let element"> {{element.officeName}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="JLG Loan Application">
+          <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.CustomerDetails' |translate}}  </th>
+          <td mat-cell *matCellDef="let element">
+            <div class="m-l-30" *ngIf="element.status.code !== 'clientStatusType.closed'">
+              <button class="account-action-button" mat-raised-button color="primary">
+                <i class="fa fa-eye" matTooltip="{{'Group_Component.General_tab.NewLoanApplication' |translate}}"></i>
+              </button>
+            </div>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="clientMemberColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: clientMemberColumns;" [routerLink]="['/clients', row.id, 'general']" class="select-row"></tr>      
+      </table>
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    </div>
 
   </div>
-
+  <div style="clear: both;"></div>
   <div *ngIf="loanAccounts">
 
     <div fxLayout="row" fxLayoutAlign="start" class="table-header">
       <div class="m-b-10">
-        <h3>Loan Accounts</h3>
+        <h3>{{'Group_Component.General_tab.LoanAccounts' |translate}}</h3>
       </div>
       <div *ngIf="(loanAccounts|accountsFilter:'loan':'closed').length" class="action-button m-b-10">
         <button mat-raised-button class="f-right" color="primary"
@@ -79,7 +131,7 @@
       class="mat-elevation-z1 m-b-30">
 
       <ng-container matColumnDef="Account No">
-        <th mat-header-cell *matHeaderCellDef> Account No. </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.AccountNo.' |translate}} </th>
         <td mat-cell *matCellDef="let element"> <i class="fa fa-stop"
             [ngClass]="element.inArrears?'status-active-overdue':(element.status.code|statusLookup)"
             [matTooltip]="element.inArrears?'Active Overdue':element.status.value"></i>
@@ -88,27 +140,27 @@
       </ng-container>
 
       <ng-container matColumnDef="Loan Account">
-        <th mat-header-cell *matHeaderCellDef> Loan Account </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.LoanAccount' |translate}} </th>
         <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Original Loan">
-        <th mat-header-cell *matHeaderCellDef> Original Loan </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.OriginalLoan' |translate}} </th>
         <td mat-cell *matCellDef="let element"> {{element.originalLoan}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Loan Balance">
-        <th mat-header-cell *matHeaderCellDef> Loan Balance </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.LoanBalance' |translate}} </th>
         <td mat-cell *matCellDef="let element"> {{element.loanBalance}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Amount Paid">
-        <th mat-header-cell *matHeaderCellDef> Amount Paid </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.AmountPaid' |translate}} </th>
         <td mat-cell *matCellDef="let element"> {{element.amountPaid}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Type">
-        <th mat-header-cell *matHeaderCellDef> Type </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.Type' |translate}} </th>
         <td mat-cell *matCellDef="let element">
           <i class="fa fa-large" [ngClass]="(element.loanType.value==='Individual')?'fa-user':'fa-group'"
           [matTooltip]="(element.loanType.value==='Individual')?'Individual':'Group'"></i>
@@ -116,7 +168,7 @@
       </ng-container>
 
       <ng-container matColumnDef="Actions">
-        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.Actions' |translate}} </th>
         <td mat-cell *matCellDef="let element">
           <button *ngIf="element.status.active" class="account-action-button" mat-raised-button color="primary">
             <i class="fa fa-dollar" matTooltip="Make Repayment"></i>
@@ -145,7 +197,7 @@
       class="mat-elevation-z1 m-b-30">
 
       <ng-container matColumnDef="Account No">
-        <th mat-header-cell *matHeaderCellDef> Account No. </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.AccountNo.' |translate}} </th>
         <td mat-cell *matCellDef="let element"> <i class="fa fa-stop"
             [ngClass]="element.inArrears?'status-active-overdue':(element.status.code|statusLookup)"
             [matTooltip]="element.inArrears?'Active Overdue':element.status.value"></i>
@@ -154,27 +206,27 @@
       </ng-container>
 
       <ng-container matColumnDef="Loan Account">
-        <th mat-header-cell *matHeaderCellDef> Loan Account </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.LoanAccount' |translate}} </th>
         <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Original Loan">
-        <th mat-header-cell *matHeaderCellDef> Original Loan </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.OriginalLoan' |translate}} </th>
         <td mat-cell *matCellDef="let element"> {{element.lastActiveTransactionDate | date}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Loan Balance">
-        <th mat-header-cell *matHeaderCellDef>Loan Balance </th>
+        <th mat-header-cell *matHeaderCellDef>{{'Group_Component.General_tab.LoanBalance' |translate}} </th>
         <td mat-cell *matCellDef="let element"> {{element.loanBalance}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Amount Paid">
-        <th mat-header-cell *matHeaderCellDef> Amount Paid </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.AmountPaid' |translate}} </th>
         <td mat-cell *matCellDef="let element"> {{element.accountBalance}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Type">
-        <th mat-header-cell *matHeaderCellDef> Type </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.Type' |translate}} </th>
         <td mat-cell *matCellDef="let element">
           <i class="fa fa-large" [ngClass]="(element.loanType.value=== 'Individual')?'fa-user':'fa-group'"
           [matTooltip]="(element.loanType.value==='Individual')?'Individual':'Group'"></i>
@@ -182,7 +234,7 @@
       </ng-container>
 
       <ng-container matColumnDef="Closed Date">
-        <th mat-header-cell *matHeaderCellDef> Closed Date </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.ClosedDate' |translate}} </th>
         <td mat-cell *matCellDef="let element">{{element.timeline.closedOnDate | date}}</td>
       </ng-container>
 
@@ -197,7 +249,7 @@
 
     <div fxLayout="row" fxLayoutAlign="start" class="table-header">
       <div class="m-b-10">
-        <h3>Saving Accounts</h3>
+        <h3>{{'Group_Component.General_tab.SavingAccounts' |translate}}</h3>
       </div>
       <div class="action-button m-b-10">
         <button *ngIf="(savingAccounts|accountsFilter:'saving':'closed').length" mat-raised-button class="f-right" color="primary"
@@ -210,28 +262,28 @@
       class="mat-elevation-z1 m-b-30">
 
       <ng-container matColumnDef="Account No">
-        <th mat-header-cell *matHeaderCellDef> Account No. </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.AccountNo.' |translate}} </th>
         <td mat-cell *matCellDef="let element"> <i class="fa fa-stop" [ngClass]="element.status.code|statusLookup" [matTooltip]="element.status.value"></i>
           {{element.accountNo}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Saving Account">
-        <th mat-header-cell *matHeaderCellDef> Saving Account </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.SavingAccount' |translate}} </th>
         <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Last Active">
-        <th mat-header-cell *matHeaderCellDef> Last Active </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.LastActive' |translate}} </th>
         <td mat-cell *matCellDef="let element"> {{element.lastActiveTransactionDate | date}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Balance">
-        <th mat-header-cell *matHeaderCellDef> Balance </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.Balance' |translate}} </th>
         <td mat-cell *matCellDef="let element"> {{element.accountBalance}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Actions">
-        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.Actions' |translate}} </th>
         <td mat-cell *matCellDef="let element">
           <button *ngIf="element.status.active" class="account-action-button" mat-raised-button color="primary"
             (click)="routeEdit($event)" [routerLink]="['../','savings-accounts', element.id, 'actions', 'Deposit']">
@@ -268,18 +320,18 @@
       class="mat-elevation-z1 m-b-30">
 
       <ng-container matColumnDef="Account No">
-        <th mat-header-cell *matHeaderCellDef> Account No. </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.AccountNo.' |translate}} </th>
         <td mat-cell *matCellDef="let element"> <i class="fa fa-stop" [ngClass]="element.status.code|statusLookup" [matTooltip]="element.status.value"></i>
           {{element.accountNo}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Saving Account">
-        <th mat-header-cell *matHeaderCellDef> Saving Account </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.SavingAccount' |translate}} </th>
         <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Closed Date">
-        <th mat-header-cell *matHeaderCellDef> Closed Date </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.ClosedDate' |translate}} </th>
         <td mat-cell *matCellDef="let element">{{element.timeline.closedOnDate | date}}</td>
       </ng-container>
 
