--- a/src/app/groups/groups-view/groups-view.component.html
+++ b/src/app/groups/groups-view/groups-view.component.html
@@ -34,7 +34,16 @@
       </div>
 
       <div class="group-meeting" fxLayoutAlign="start start">
-        <div *ngIf="groupViewData.collectionMeetingCalendar; else unassigned">
+        <div class="fixRightHeader">
+          <p>Lần giao dịch gần nhất: {{lastTransaction}}</p>
+          <p></p>
+          <p>Tháng giao dịch gần nhất:</p>
+          <p *ngFor="let item of salesLast3months; let i = index">
+            Tháng {{item.txnMont}}: tổng số tiền: {{item.rev | money}} || Số lần: {{item.txnCount}}
+          </p>
+
+        </div>
+        <!-- <div *ngIf="groupViewData.collectionMeetingCalendar; else unassigned">
           <p>
             Next Meeting on: {{groupViewData.collectionMeetingCalendar?.nextTenRecurringDates[0] | date}}
             <i class="fa fa-edit" *ngIf="editMeeting" (click)="doAction('Edit Meeting')"></i><br/>
@@ -49,7 +58,7 @@
               Meeting Frequency: N/A
             </p>
           </div>
-        </ng-template>
+        </ng-template> -->
       </div>
 
     </mat-card-title-group>
@@ -65,7 +74,7 @@
       <button mat-raised-button *midasHasPermission="'UPDATE_GROUP'" (click)="doAction('Edit')">
         <i class="fa fa-edit"></i>Edit
       </button>
-      <button mat-raised-button *midasHasPermission="'CREATE_CLIENT'">
+      <button mat-raised-button *midasHasPermission="'CREATE_CLIENT'" (click)="doAction('CreateClient')>
         <i class="fa fa-plus"></i>Add Clients
       </button>
       <button mat-raised-button *midasHasPermission="'ASSOCIATECLIENTS_GROUP'" (click)="doAction('Transfer Clients')">
