--- a/src/app/core/shell/shell.component.html
+++ b/src/app/core/shell/shell.component.html
@@ -21,16 +21,16 @@
   <mat-sidenav-content>
 
     <!-- Toolbar -->
-    <mifosx-toolbar [sidenav]="sidenav" (collapse)="toggleCollapse($event)"></mifosx-toolbar>
+    <mifosx-toolbar [sidenav]="sidenav" (collapse)="toggleCollapse($event)" class="toolBarCss"></mifosx-toolbar>
     <!-- Progress Bar -->
-    <mat-progress-bar [mode]="progressBarMode"></mat-progress-bar>
+    <mat-progress-bar [mode]="progressBarMode" class="progressBarCss"></mat-progress-bar>
 
     <!-- Breadcrumb -->
-    <mifosx-breadcrumb></mifosx-breadcrumb>
+    <mifosx-breadcrumb class="breadcrumbCss"></mifosx-breadcrumb>
     <!-- Content -->
-    <mifosx-content></mifosx-content>
+    <mifosx-content class="contentCss"></mifosx-content>
     <!-- Footer -->
-    <mifosx-footer></mifosx-footer>
+    <mifosx-footer class="footerCss"></mifosx-footer>
 
   </mat-sidenav-content>
 
