--- a/src/app/home/calendar/calendar.component.html
+++ b/src/app/home/calendar/calendar.component.html
@@ -1,3 +1,4 @@
+<!-- Phần calendar -->
 <div  fxLayout="column">
   <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="space-around start" fxLayoutGap="1%">
     
@@ -31,61 +32,67 @@
     (eventClicked)="handleEvent('Clicked', $event.event)" (eventTimesChanged)="eventTimesChanged($event)">
   </mwl-calendar-day-view>
 </div>
-
-<!-- Everything you see below is just for the demo, you don't need to include it in your app -->
-
-<br /><br /><br />
-
+<br /><br />
+<!-- Phần bảng danh sách công việc -->
 <h3>
-  Danh sách công việc
-  <button mat-raised-button color="primary" (click)="addEvent()">
-    <fa-icon icon="plus"></fa-icon> &nbsp;&nbsp;
+  Thêm công việc mới:   
+  <button  mat-mini-fab  color="primary" (click)="addEvent()">
+    <fa-icon icon="plus"></fa-icon>    
     <!-- {{'Home_Component.btnNewCustomer'| translate}} -->
-    Thêm công việc mới
   </button>
-  <!-- <button class="btn btn-primary float-right" (click)="addEvent()">
-    Thêm mới
-  </button> -->
-  <div class="clearfix"></div>
+
+  <!-- <div class="clearfix"></div> -->
 </h3>
 
 <div class="table-responsive">
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th>Title</th>
-        <th>Primary color</th>
-        <th>Secondary color</th>
-        <th>Starts at</th>
-        <th>Ends at</th>
-        <th>Remove</th>
+        <th>Nội dung</th>
+        <th>Nhóm chính</th>
+        <th>Nhóm phụ</th>
+        <th>Từ lúc</th>
+        <th>Đến lúc</th>
+        <th>Hành động</th>
       </tr>
     </thead>
 
     <tbody>
       <tr *ngFor="let event of events">
-        <td>
-          <input type="text" class="form-control" [(ngModel)]="event.title" (keyup)="refresh.next()" />
+        <td style="width: 55%;">
+          <mat-form-field style="width: 100%">
+          <input matInput type="text" class="form-control" [(ngModel)]="event.title" (keyup)="refresh.next()" />
+          </mat-form-field >
         </td>
-        <td>
-          <input type="color" [(ngModel)]="event.color.primary" (change)="refresh.next()" />
+        <td style="width: 5%;">
+          <mat-form-field style="width: 32px;" >
+            <input matInput type="color" [(ngModel)]="event.color.primary" (change)="refresh.next()" />
+          </mat-form-field>
+          
         </td>
-        <td>
-          <input type="color" [(ngModel)]="event.color.secondary" (change)="refresh.next()" />
+        <td style="width: 5%;">
+          <mat-form-field style="width: 32px;">
+            <input matInput type="color" [(ngModel)]="event.color.secondary" (change)="refresh.next()" />
+          </mat-form-field>
+          
         </td>
-        <td>
-          <input class="form-control" type="text" mwlFlatpickr [(ngModel)]="event.start"
+        <td style="width: 15%;">
+          <mat-form-field  style="width: 95%">
+            <input matInput class="form-control" type="date" mwlFlatpickr [(ngModel)]="event.start"
             (ngModelChange)="refresh.next()" dateFormat="Y-m-dTH:i" altFormat="F j, Y H:i" placeholder="Not set" />
+          </mat-form-field>
+         
         </td>
-        <td>
-          <input class="form-control" type="text" mwlFlatpickr [(ngModel)]="event.end" (ngModelChange)="refresh.next()"
+        <td style="width: 15%;">
+          <mat-form-field style="width: 94%">
+            <input matInput class="form-control" type="date" mwlFlatpickr [(ngModel)]="event.end" (ngModelChange)="refresh.next()"
             dateFormat="Y-m-dTH:i" altFormat="F j, Y H:i" placeholder="Not set" />
+          </mat-form-field>
+          
         </td>
-        <td>
-          <button mat-raised-button color="danger" (click)="addEvent()">
-            <fa-icon icon="trash"></fa-icon> &nbsp;&nbsp;
-            <!-- {{'Home_Component.btnNewCustomer'| translate}} -->
-            Xóa
+        <td fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="center center ">
+          <button mat-mini-fab color="warn" (click)="addEvent()" title="Xóa events">
+            <fa-icon icon="trash"></fa-icon>
           </button>
   
         </td>
@@ -93,8 +100,8 @@
     </tbody>
   </table>
 </div>
-
-<ng-template #modalContent let-close="close">
+<!-- ------------------------- -->
+<!-- <ng-template #modalContent let-close="close">
   <div class="modal-header">
     <h5 class="modal-title">Event action occurred</h5>
     <button type="button" class="close" (click)="close()">
@@ -116,4 +123,4 @@
       OK
     </button>
   </div>
-</ng-template>
+</ng-template> -->
