--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,12 @@
 <div fxLayout="column">
+ 
   <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="start" fxLayoutGap="1%" class="fluidcontainer m-b-10 p-10"
     fxFlex="100">
 
-    <button mat-raised-button color="primary" [routerLink]="['/dashboard']">
+    <!-- <button mat-raised-button color="primary" [routerLink]="['/dashboard']">
       <fa-icon icon="tachometer-alt"></fa-icon>&nbsp;&nbsp;
       {{'Home_Component.btnDashboard'| translate}}
-    </button>
+    </button> -->
     <button mat-raised-button color="primary" [routerLink]="['/clients/create']" [queryParams]="{go_back:'home'}">
       <fa-icon icon="user-plus"></fa-icon> &nbsp;&nbsp;
       {{'Home_Component.btnNewCustomer'| translate}}
@@ -15,22 +16,21 @@
       {{'Home_Component.btnNewGroup'| translate}}
     </button>
   </div>
-
-  <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="space-around start " class="fluidcontainer p-10 m-b-20"
+  <h1 class=" p-l-20">{{'Home_Component.welcome'| translate}} <strong>{{username}}</strong>! </h1>
+  <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="space-around start " class="fluidcontainer  m-b-10"
     fxFlex="100">
 
-    <div fxLayout="column" fxLayout.lt-md="column" class="fluidcontainer p-10 m-b-20"
-    fxFlex="70">
-    <mat-card class=" m-b-20" fxFlex="100">
-      <mat-card-header>
-        <mat-card-title class="title">
-          {{'Home_Component.welcome'| translate}} <strong>{{username}}</strong>!
-        </mat-card-title>
-      </mat-card-header>
+    <div fxLayout="column" fxLayout.lt-md="column" class="fluidcontainer p-10 m-b-20" fxFlex="100">
+      <mat-card class=" m-b-10" fxFlex="100">
+        <mat-card-header>
+          <mat-card-title class="title">
+            <h3>Tìm thẻ để thực hiện giao dịch cho khách hàng:</h3>
+          </mat-card-title>
+        </mat-card-header>
 
-      <mat-card-content>
-        <!-- Phần tìm kiếm các hành động, tạm ẩn -->
-        <!-- <div fxLayout="column">
+        <mat-card-content>
+          <!-- Phần tìm kiếm các hành động, tạm ẩn -->
+          <!-- <div fxLayout="column">
           <mat-form-field>
             <mat-label>{{'Home_Component.searchActivity'| translate }}</mat-label>
             <input matInput [matAutocomplete]="activitySearch" [formControl]="searchText">
@@ -42,35 +42,33 @@
             <span>{{activity.activity}}</span>
           </mat-option>
         </mat-autocomplete> -->
-        <midas-mainboard></midas-mainboard>
-      </mat-card-content>
+        
+          <midas-mainboard></midas-mainboard>
+        </mat-card-content>
 
-      <!-- <img mat-card-image src="assets/images/midas-logo-flat.png" alt="MIDAS"> -->
+      </mat-card>
+      <mat-card class=" m-b-10" fxFlex="100">
+        <mat-card-header>
+          <mat-card-title class="title">
+            <!-- {{'Home_Component.Card'| translate}} <strong>{{username}}</strong>! -->
+            Lịch đáo hạn thẻ và công việc cần làm:
+          </mat-card-title>
+        </mat-card-header>
 
-    </mat-card>
-    <mat-card class=" m-b-20" fxFlex="100">
-      <mat-card-header>
-        <mat-card-title class="title">
-          <!-- {{'Home_Component.Card'| translate}} <strong>{{username}}</strong>! -->
-          Lịch làm việc
-        </mat-card-title>
-      </mat-card-header>
+        <mat-card-content>
+          <midas-calendar></midas-calendar>
+        </mat-card-content>
 
-      <mat-card-content>
-        <midas-calendar></midas-calendar>
-      </mat-card-content>
 
-      
 
-    </mat-card>
+      </mat-card>
 
     </div>
+
+
+    <!-- Tạm thời ẩn mục này
     <div fxLayout="column" fxFlex="25">
-      
       <midas-rollterm-list></midas-rollterm-list>
-
-      <!-- <midas-ondue-card></midas-ondue-card> -->
-    </div>
-    
+      <midas-ondue-card></midas-ondue-card>
+    </div> -->
   </div>
-</div>
