--- a/src/app/home/mainboard/mainboard.component.html
+++ b/src/app/home/mainboard/mainboard.component.html
@@ -4,7 +4,7 @@
   <div class="example-container " >
     <mat-form-field style="width: 100%; "  >
       <mat-label>Tìm kiếm khách hàng, đại lý thực hiện giao dịch</mat-label>
-      <input    type="email" matInput #querySearchAll (change)=" this.searchClientAndGroup(querySearchAll.value);"
+      <input type="text" matInput #querySearchAll (change)=" this.searchClientAndGroup(querySearchAll.value);"
              placeholder="Tìm kiếm theo tên, số CMND/CCCD ,số thẻ, số điện thoại">
 
     </mat-form-field>
