--- a/src/app/transactions/create-transaction/create-transaction.component.html
+++ b/src/app/transactions/create-transaction/create-transaction.component.html
@@ -282,7 +282,7 @@
             </mat-form-field>
           </div>
         </div>
-        <div fxFlex.gt-sm="16%" fxLayout="row wrap" class="content">
+        <div fxFlex.gt-sm="16%" fxLayout="row wrap" class="content" *midasHasActiveModule="'billModule'">
           <div fxFlex="100%">
             <mat-form-field>
               <mat-label>Số tiền cần quẹt(VNĐ)</mat-label>
