--- a/src/app/groups/groups-view/groups-view.component.html
+++ b/src/app/groups/groups-view/groups-view.component.html
@@ -74,9 +74,10 @@
       <button mat-raised-button *midasHasPermission="'UPDATE_GROUP'" (click)="doAction('Edit')">
         <i class="fa fa-edit"></i>Edit
       </button>
-      <button mat-raised-button *midasHasPermission="'CREATE_CLIENT'" (click)="doAction('CreateClient')>
+      <button mat-raised-button *midasHasPermission="'CREATE_CLIENT'" (click)="doAction('CreateClient')">
         <i class="fa fa-plus"></i>Add Clients
       </button>
+      
       <button mat-raised-button *midasHasPermission="'ASSOCIATECLIENTS_GROUP'" (click)="doAction('Transfer Clients')">
         <i class="fa fa-exchange"></i>Transfer Clients
       </button>
