--- a/src/app/groups/groups-view/committee-tab/committee-tab.component.html
+++ b/src/app/groups/groups-view/committee-tab/committee-tab.component.html
@@ -2,12 +2,14 @@
   
   <div fxLayout="row" fxLayoutAlign="start">
     <div class="m-b-10">
-      <h3>Client Members</h3>
+      <!-- <h3>Client Members</h3> -->
+      <h3>Thông tin chủ sở hữu của Đại lý</h3>
     </div>
     <div class="action-button m-b-10" fxLayoutGap="25px" *ngIf="groupStatus !== 'Closed'">
       <button mat-raised-button class="f-right" color="primary"
       *midasHasPermission="'ASSIGNROLE_GROUP'" [routerLink]="['add-role']">
-        <i class="fa fa-plus"></i>&nbsp; Add</button>
+        <!-- <i class="fa fa-plus"></i>&nbsp; Add</button> -->
+        <i class="fa fa-plus"></i>&nbsp; Thêm</button>
     </div>
   </div>
 
@@ -16,12 +18,14 @@
     <table #rolesTable mat-table [dataSource]="groupRolesData" class="mat-elevation-z1 m-b-25">
 
       <ng-container matColumnDef="Name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <!-- <th mat-header-cell *matHeaderCellDef> Name </th> -->
+        <th mat-header-cell *matHeaderCellDef> Tên </th>
         <td mat-cell *matCellDef="let element"> {{element.clientName}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Role">
-        <th mat-header-cell *matHeaderCellDef> Role </th>
+        <!-- <th mat-header-cell *matHeaderCellDef> Role </th> -->
+        <th mat-header-cell *matHeaderCellDef> Vai trò </th>
         <td mat-cell *matCellDef="let element"> {{element.role.name}} </td>
       </ng-container>
 
@@ -31,7 +35,8 @@
       </ng-container>
 
       <ng-container matColumnDef="Actions">
-        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <!-- <th mat-header-cell *matHeaderCellDef> Actions </th> -->
+        <th mat-header-cell *matHeaderCellDef> Hành động </th>
         <td mat-cell *matCellDef="let element">
           <span *ngIf="groupStatus !== 'Closed'">
             <button class="account-action-button" mat-raised-button color="warn"
