--- a/src/app/groups/groups-view/general-tab/general-tab.component.html
+++ b/src/app/groups/groups-view/general-tab/general-tab.component.html
@@ -1,9 +1,11 @@
 <div class="tab-container mat-typography">
 
-  <h3>Group Details</h3>
+  <!-- <h3>Group Details</h3> -->
+  <h3>Thông tin về đại lý</h3>
+
 
   <div fxLayout="row" fxLayoutGap="32px" class="group-details-container m-b-30">
-    <p>
+    <!-- <p>
       Active Client Loans: {{groupSummary?.activeClientLoans}}<br/>
       Active Client Borrowers: {{groupSummary?.activeClientBorrowers}}<br/>
       Active Overdue Client Loans: {{groupSummary?.overdueClientLoans}}<br/>
@@ -12,16 +14,123 @@
       Active Group Loans: {{groupSummary?.activeGroupLoans}}<br/>
       Active Group Borrowers: {{groupSummary?.activeGroupBorrowers}}<br/>
       Active Overdue Group Loans: {{groupSummary?.overdueGroupLoans}}<br/>
-    </p>
+    </p> -->
     <p>
-      Active Clients: {{groupSummary?.activeClients}}<br/>
+      <!-- Active Clients: {{groupSummary?.activeClients}}<br/> -->
+      Số lượng thành viên active: {{groupSummary?.activeClients}}<br/>
     </p>
+  </div>
+  <!-- Thông tin saving account -->
+  <div *ngIf="savingAccounts">
+
+    <div fxLayout="row" fxLayoutAlign="start" class="table-header">
+      <div class="m-b-10">
+        <!-- <h3>Saving Accounts</h3> -->
+        <h3>Tài khoản tạm ứng</h3>
+      </div>
+      <div class="action-button m-b-10">
+        <button *ngIf="(savingAccounts|accountsFilter:'saving':'closed').length" mat-raised-button class="f-right" color="primary"
+        (click)="toggleSavingAccountsOverview()">{{showClosedSavingAccounts?'View Active Accounts':'View Closed Accounts'}}</button>
+      </div>
+    </div>
+
+    <!-- Open Savings Accounts Table -->
+    <table *ngIf="!showClosedSavingAccounts" mat-table [dataSource]="savingAccounts|accountsFilter:'saving'"
+      class="mat-elevation-z1 m-b-30">
+
+      <ng-container matColumnDef="Account No">
+        <!-- <th mat-header-cell *matHeaderCellDef> Account No. </th> -->
+        <th mat-header-cell *matHeaderCellDef> Số tài khoản </th>
+        <td mat-cell *matCellDef="let element"> <i class="fa fa-stop" [ngClass]="element.status.code|statusLookup" [matTooltip]="element.status.value"></i>
+          {{element.accountNo}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Saving Account">
+        <!-- <th mat-header-cell *matHeaderCellDef> Saving Account </th> -->
+        <th mat-header-cell *matHeaderCellDef> Loại tài khoản </th>
+        <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Last Active">
+        <!-- <th mat-header-cell *matHeaderCellDef> Last Active </th> -->
+        <th mat-header-cell *matHeaderCellDef> Ngày phát sinh gần nhất </th>
+        <td mat-cell *matCellDef="let element"> {{element.lastActiveTransactionDate | date}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Balance">
+        <!-- <th mat-header-cell *matHeaderCellDef> Balance </th> -->
+        <th mat-header-cell *matHeaderCellDef matTooltip="Nếu số dư >0 là phải thu, nếu số dư <0 là phải trả"> Số dư </th>
+        <td mat-cell *matCellDef="let element"> {{element.accountBalance}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Actions">
+        <!-- <th mat-header-cell *matHeaderCellDef> Actions </th> -->
+        <th mat-header-cell *matHeaderCellDef> Hành động </th>
+        <td mat-cell *matCellDef="let element">
+          <button *ngIf="element.status.active" class="account-action-button" mat-raised-button color="primary"
+            (click)="routeEdit($event)" [routerLink]="['../','savings-accounts', element.id, 'actions', 'Deposit']">
+            <!-- <i class="fa fa-arrow-up" matTooltip="Deposit"></i> -->
+            <i class="fa fa-arrow-up" matTooltip="Ghi nhận phải trả"></i>
+          </button>
+          <button *ngIf="element.status.active" class="account-action-button" mat-raised-button color="primary"
+            (click)="routeEdit($event)" [routerLink]="['../','savings-accounts', element.id, 'actions', 'Withdrawal']">
+            <!-- <i class="fa fa-arrow-down" matTooltip="Withdraw"></i> -->
+            <i class="fa fa-arrow-down" matTooltip="Ghi nhận phải thu"></i>
+          </button>
+          <button *ngIf="element.status.submittedAndPendingApproval" class="account-action-button" mat-raised-button color="primary"
+            (click)="routeEdit($event)" [routerLink]="['../','savings-accounts', element.id, 'actions', 'Approve']">
+            <i class="fa fa-check" matTooltip="Approve"></i>
+          </button>
+          <button *ngIf="!element.status.submittedAndPendingApproval && !element.status.active"
+            class="account-action-button" mat-raised-button color="primary"
+            (click)="routeEdit($event)" [routerLink]="['../','savings-accounts', element.id, 'actions', 'Undo Approval']">
+            <i class="fa fa-undo" matTooltip="Undo Approval"></i>
+          </button>
+          <button *ngIf="!element.status.submittedAndPendingApproval && !element.status.active"
+            class="account-action-button" mat-raised-button color="primary"
+            (click)="routeEdit($event)" [routerLink]="['../','savings-accounts', element.id, 'actions', 'Activate']">
+            <i class="fa fa-check-circle" matTooltip="Activate"></i>
+          </button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="openSavingsColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: openSavingsColumns;" [routerLink]="['../', 'savings-accounts', row.id, 'transactions']"></tr>
+
+    </table>
+
+    <!-- Closed Saving Accounts Table -->
+    <table *ngIf="showClosedSavingAccounts" mat-table [dataSource]="savingAccounts|accountsFilter:'saving':'closed'"
+      class="mat-elevation-z1 m-b-30">
+
+      <ng-container matColumnDef="Account No">
+        <th mat-header-cell *matHeaderCellDef> Account No. </th>
+        <td mat-cell *matCellDef="let element"> <i class="fa fa-stop" [ngClass]="element.status.code|statusLookup" [matTooltip]="element.status.value"></i>
+          {{element.accountNo}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Saving Account">
+        <th mat-header-cell *matHeaderCellDef> Saving Account </th>
+        <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Closed Date">
+        <th mat-header-cell *matHeaderCellDef> Closed Date </th>
+        <td mat-cell *matCellDef="let element">{{element.timeline.closedOnDate | date}}</td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="closedSavingsColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: closedSavingsColumns;" [routerLink]="['../', 'savings-accounts', row.id, 'transactions']"></tr>
+
+    </table>
+
   </div>
 
   <!-- Client Members Table -->
   <div *ngIf="groupClientMembers">
 
-    <h3>Client Members</h3>
+    <!-- <h3>Client Members</h3> -->
+    <h3>Chi tiết thông tin thành viên</h3>
 
     <table mat-table [dataSource]="groupClientMembers"
       class="mat-elevation-z1 m-b-30">
@@ -193,101 +302,6 @@
 
   </div>
 
-  <div *ngIf="savingAccounts">
-
-    <div fxLayout="row" fxLayoutAlign="start" class="table-header">
-      <div class="m-b-10">
-        <h3>Saving Accounts</h3>
-      </div>
-      <div class="action-button m-b-10">
-        <button *ngIf="(savingAccounts|accountsFilter:'saving':'closed').length" mat-raised-button class="f-right" color="primary"
-        (click)="toggleSavingAccountsOverview()">{{showClosedSavingAccounts?'View Active Accounts':'View Closed Accounts'}}</button>
-      </div>
-    </div>
-
-    <!-- Open Savings Accounts Table -->
-    <table *ngIf="!showClosedSavingAccounts" mat-table [dataSource]="savingAccounts|accountsFilter:'saving'"
-      class="mat-elevation-z1 m-b-30">
-
-      <ng-container matColumnDef="Account No">
-        <th mat-header-cell *matHeaderCellDef> Account No. </th>
-        <td mat-cell *matCellDef="let element"> <i class="fa fa-stop" [ngClass]="element.status.code|statusLookup" [matTooltip]="element.status.value"></i>
-          {{element.accountNo}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="Saving Account">
-        <th mat-header-cell *matHeaderCellDef> Saving Account </th>
-        <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="Last Active">
-        <th mat-header-cell *matHeaderCellDef> Last Active </th>
-        <td mat-cell *matCellDef="let element"> {{element.lastActiveTransactionDate | date}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="Balance">
-        <th mat-header-cell *matHeaderCellDef> Balance </th>
-        <td mat-cell *matCellDef="let element"> {{element.accountBalance}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="Actions">
-        <th mat-header-cell *matHeaderCellDef> Actions </th>
-        <td mat-cell *matCellDef="let element">
-          <button *ngIf="element.status.active" class="account-action-button" mat-raised-button color="primary"
-            (click)="routeEdit($event)" [routerLink]="['../','savings-accounts', element.id, 'actions', 'Deposit']">
-            <i class="fa fa-arrow-up" matTooltip="Deposit"></i>
-          </button>
-          <button *ngIf="element.status.active" class="account-action-button" mat-raised-button color="primary"
-            (click)="routeEdit($event)" [routerLink]="['../','savings-accounts', element.id, 'actions', 'Withdrawal']">
-            <i class="fa fa-arrow-down" matTooltip="Withdraw"></i>
-          </button>
-          <button *ngIf="element.status.submittedAndPendingApproval" class="account-action-button" mat-raised-button color="primary"
-            (click)="routeEdit($event)" [routerLink]="['../','savings-accounts', element.id, 'actions', 'Approve']">
-            <i class="fa fa-check" matTooltip="Approve"></i>
-          </button>
-          <button *ngIf="!element.status.submittedAndPendingApproval && !element.status.active"
-            class="account-action-button" mat-raised-button color="primary"
-            (click)="routeEdit($event)" [routerLink]="['../','savings-accounts', element.id, 'actions', 'Undo Approval']">
-            <i class="fa fa-undo" matTooltip="Undo Approval"></i>
-          </button>
-          <button *ngIf="!element.status.submittedAndPendingApproval && !element.status.active"
-            class="account-action-button" mat-raised-button color="primary"
-            (click)="routeEdit($event)" [routerLink]="['../','savings-accounts', element.id, 'actions', 'Activate']">
-            <i class="fa fa-check-circle" matTooltip="Activate"></i>
-          </button>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="openSavingsColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: openSavingsColumns;" [routerLink]="['../', 'savings-accounts', row.id, 'transactions']"></tr>
-
-    </table>
-
-    <!-- Closed Saving Accounts Table -->
-    <table *ngIf="showClosedSavingAccounts" mat-table [dataSource]="savingAccounts|accountsFilter:'saving':'closed'"
-      class="mat-elevation-z1 m-b-30">
-
-      <ng-container matColumnDef="Account No">
-        <th mat-header-cell *matHeaderCellDef> Account No. </th>
-        <td mat-cell *matCellDef="let element"> <i class="fa fa-stop" [ngClass]="element.status.code|statusLookup" [matTooltip]="element.status.value"></i>
-          {{element.accountNo}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="Saving Account">
-        <th mat-header-cell *matHeaderCellDef> Saving Account </th>
-        <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="Closed Date">
-        <th mat-header-cell *matHeaderCellDef> Closed Date </th>
-        <td mat-cell *matCellDef="let element">{{element.timeline.closedOnDate | date}}</td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="closedSavingsColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: closedSavingsColumns;" [routerLink]="['../', 'savings-accounts', row.id, 'transactions']"></tr>
-
-    </table>
-
-  </div>
+  
 
 </div>
