--- a/src/app/groups/groups-view/groups-view.component.html
+++ b/src/app/groups/groups-view/groups-view.component.html
@@ -16,24 +16,24 @@
           <h3>
             <i class="fa fa-stop" [ngClass]="groupViewData.status.code|statusLookup"
                [matTooltip]="groupViewData.status.value"></i>
-            Group Name : {{groupViewData.name}}
+            Tên đại lý : {{groupViewData.name}}
           </h3>
         </mat-card-title>
         <mat-card-subtitle>
           <p>
-            Group #: {{groupViewData.id}} | Center Name: {{groupViewData.centerName}} |
-            Staff: {{groupViewData.staffName || 'Unassigned'}}<br/>
-            Office Name: {{groupViewData.officeName}}<br/>
-            Activation Date : {{(groupViewData.activationDate) ? (groupViewData.activationDate|date) : 'Not Activated'}}
+            ID #: {{groupViewData.id}} | Thuộc Trung tâm: {{groupViewData.centerName}} |
+            Nhân viên quản lý: {{groupViewData.staffName || 'Unassigned'}}<br/>
+            Tên chi nhánh: {{groupViewData.officeName}}<br/>
+            Ngày kích hoạt : {{(groupViewData.activationDate) ? (groupViewData.activationDate|date) : 'Not Activated'}}
             <br/>
             <span *ngIf="!groupViewData.active">
-             Closure Date: {{groupViewData.timeline.closedOnDate | date}}
+            Ngày đóng mã: {{groupViewData.timeline.closedOnDate | date}}
             </span>
           </p>
         </mat-card-subtitle>
       </div>
 
-      <div class="group-meeting" fxLayoutAlign="start start">
+      <!-- <div class="group-meeting" fxLayoutAlign="start start">
         <div *ngIf="groupViewData.collectionMeetingCalendar; else unassigned">
           <p>
             Next Meeting on: {{groupViewData.collectionMeetingCalendar?.nextTenRecurringDates[0] | date}}
@@ -50,7 +50,7 @@
             </p>
           </div>
         </ng-template>
-      </div>
+      </div> -->
 
     </mat-card-title-group>
 
@@ -60,22 +60,22 @@
       </button>
       <span *ngIf="!(groupViewData.status.value==='Active')">
           <button mat-raised-button *midasHasPermission="'UPDATE_GROUP'" (click)="doAction('Activate')">
-            <i class="fa fa-check-sign"></i>Activate</button>
+            <i class="fa fa-check-sign"></i>Kích hoạt</button>
         </span>
       <button mat-raised-button *midasHasPermission="'UPDATE_GROUP'" (click)="doAction('Edit')">
-        <i class="fa fa-edit"></i>Edit
+        <i class="fa fa-edit"></i>Sửa thông tin
       </button>
-      <button mat-raised-button *midasHasPermission="'CREATE_CLIENT'">
-        <i class="fa fa-plus"></i>Add Clients
+      <!-- <button mat-raised-button *midasHasPermission="'CREATE_CLIENT'">
+        <i class="fa fa-plus"></i>Thêm thành viên
       </button>
       <button mat-raised-button *midasHasPermission="'ASSOCIATECLIENTS_GROUP'" (click)="doAction('Transfer Clients')">
-        <i class="fa fa-exchange"></i>Transfer Clients
+        <i class="fa fa-exchange"></i>Chuyển thành viên
       </button>
       <button mat-raised-button *midasHasPermission="'TRANSFERCLIENTS_GROUP'" (click)="doAction('Manage Members')">
-        <i class="fa fa-user"></i>Manage Members
-      </button>
+        <i class="fa fa-user"></i>Quản lý thành viên
+      </button> -->
 
-      <button mat-raised-button *ngIf="groupViewData.active" [matMenuTriggerFor]="AccountApplications">
+      <!-- <button mat-raised-button *ngIf="groupViewData.active" [matMenuTriggerFor]="AccountApplications">
         <i class="fa fa-file"></i>Applications
       </button>
       <mat-menu #AccountApplications="matMenu">
@@ -85,22 +85,36 @@
                 [routerLink]="['savings-accounts', 'create']">Group Saving Application
         </button>
         <button mat-menu-item *midasHasPermission="'CREATE_LOAN'">Group Loan Application</button>
+      </mat-menu> -->
+      <button mat-raised-button [matMenuTriggerFor]="Member">Thành viên</button>
+      <mat-menu #Member="matMenu">
+        <button mat-menu-item *midasHasPermission="'CREATE_CLIENT'">
+          <i class="fa fa-plus"></i>Thêm thành viên
+        </button>
+        <button mat-menu-item *midasHasPermission="'ASSOCIATECLIENTS_GROUP'" (click)="doAction('Transfer Clients')">
+          <i class="fa fa-exchange"></i>Chuyển thành viên
+        </button>
+        <button mat-menu-item *midasHasPermission="'TRANSFERCLIENTS_GROUP'" (click)="doAction('Manage Members')">
+          <i class="fa fa-user"></i>Quản lý thành viên
+        </button> 
       </mat-menu>
 
-      <button mat-raised-button [matMenuTriggerFor]="More">More</button>
+      <button mat-raised-button [matMenuTriggerFor]="More">Tính năng khác</button>
       <mat-menu #More="matMenu">
-          <span *ngIf="groupViewData.collectionMeetingCalendar">
+        <!-- <span *ngIf="groupViewData.collectionMeetingCalendar">
             <button mat-menu-item *midasHasPermission="'SAVEORUPDATEATTENDANCE_MEETING'"
-                    (click)="doAction('Attendance')">Attendance</button></span>
+                    (click)="doAction('Attendance')">Attendance</button>
+        </span> -->
         <span *ngIf="!groupViewData.staffId">
-            <button mat-menu-item *midasHasPermission="'ASSIGNSTAFF_GROUP'" (click)="doAction('Assign Staff')">Assign Staff</button></span>
+            <button mat-menu-item *midasHasPermission="'ASSIGNSTAFF_GROUP'" (click)="doAction('Assign Staff')">Phân bổ nhân viên</button></span>
         <span *ngIf="groupViewData.staffId">
-            <button mat-menu-item *midasHasPermission="'UNASSIGNSTAFF_GROUP'" (click)="doAction('Unassign Staff')">Unassign Staff</button></span>
-        <span
+            <button mat-menu-item *midasHasPermission="'UNASSIGNSTAFF_GROUP'" (click)="doAction('Unassign Staff')">Bỏ phẩn bổ nhân viên</button></span>
+        <!-- <span
           *ngIf="!(groupViewData.centerId || groupViewData.collectionMeetingCalendar) && groupViewData.status.value==='Active'">
-            <button mat-menu-item *midasHasPermission="'CREATE_MEETING'" (click)="doAction('Attach Meeting')">Attach Meeting</button></span>
-        <button mat-menu-item *midasHasPermission="'CLOSE_GROUP'" (click)="doAction('Close')">Close</button>
-        <button mat-menu-item *midasHasPermission="'DELETE_GROUP'" (click)="doAction('Delete')">Delete</button>
+            <button mat-menu-item *midasHasPermission="'CREATE_MEETING'" (click)="doAction('Attach Meeting')">Attach Meeting</button>
+        </span> -->
+        <button mat-menu-item *midasHasPermission="'CLOSE_GROUP'" (click)="doAction('Close')">Đóng mã đại lý</button>
+        <button mat-menu-item *midasHasPermission="'DELETE_GROUP'" (click)="doAction('Delete')">Xóa mã đại lý</button>
       </mat-menu>
 
     </mat-card-actions>
@@ -112,16 +126,16 @@
     <nav mat-tab-nav-bar class="navigation-tabs">
       <a mat-tab-link [routerLink]="['./general']" routerLinkActive #general="routerLinkActive"
          [active]="general.isActive">
-        General
+        Thông tin chung
       </a>
       <a mat-tab-link [routerLink]="['./notes']" *midasHasPermission="'READ_GROUPNOTE'" routerLinkActive
          #notes="routerLinkActive"
          [active]="notes.isActive">
-        Notes
+        Ghi chú
       </a>
       <a mat-tab-link [routerLink]="['./committee']" routerLinkActive #committee="routerLinkActive"
          [active]="committee.isActive">
-        Committee
+        Chủ sở hữu
       </a>
       <span *ngFor="let groupDatatable of groupDatatables">
         <a mat-tab-link *midasHasPermission="'READ_' + groupDatatable.registeredTableName"
