--- a/src/app/clients/clients-view/documents-tab/documents-tab.component.html
+++ b/src/app/clients/clients-view/documents-tab/documents-tab.component.html
@@ -2,40 +2,41 @@
 
     <!-- Documents Table -->
 
-    <h3>Documents</h3>
+    <!-- <h3>Documents</h3> -->
+    <h3>Hồ sơ khách hàng</h3>
 
-    <button mat-raised-button class="f-right" color="primary" (click)="uploadDocument()" *midasHasPermission="'CREATE_DOCUMENT'">
-    <fa-icon icon="plus"></fa-icon>
-    &nbsp;&nbsp; Add
+    <button mat-raised-button class="f-right" color="primary" (click)="uploadDocument()" *midasHasPermission="'CREATE_DOCUMENT'" matTooltip="Thêm hồ sơ của khách hàng">
+    <fa-icon icon="plus" ></fa-icon>
+    &nbsp;&nbsp; Thêm
   </button>
 
     <table mat-table #documentsTable [dataSource]="clientDocuments">
 
         <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Name </th>
+            <th mat-header-cell *matHeaderCellDef> Tên </th>
             <td mat-cell *matCellDef="let document">
                 {{document.name}} </td>
         </ng-container>
 
         <ng-container matColumnDef="description">
-            <th mat-header-cell *matHeaderCellDef> Description </th>
+            <th mat-header-cell *matHeaderCellDef> Mô tả </th>
             <td mat-cell *matCellDef="let document"> {{document.description}} </td>
         </ng-container>
 
         <ng-container matColumnDef="fileName">
-            <th mat-header-cell *matHeaderCellDef> File Name </th>
+            <th mat-header-cell *matHeaderCellDef> Tên file </th>
             <td mat-cell *matCellDef="let document"> {{document.fileName}}
             </td>
         </ng-container>
 
         <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef> Actions </th>
+            <th mat-header-cell *matHeaderCellDef> Hành động </th>
             <td mat-cell *matCellDef="let document; let i = index">
                 <button class="document-action-button" mat-raised-button color="primary" (click)="download(document.parentEntityId,document.id)">
-          <fa-icon icon="cloud-download-alt"></fa-icon>
+          <fa-icon icon="cloud-download-alt" matTooltip="Tải về"></fa-icon>
         </button>
                 <button class="document-action-button" mat-raised-button color="warn" (click)="deleteDocument(document.parentEntityId,document.id,i)">
-          <fa-icon icon="times"></fa-icon>
+          <fa-icon icon="times" matTooltip="Xóa tài liệu"></fa-icon>
         </button>
             </td>
         </ng-container>
