--- a/src/app/clients/clients-view/identities-tab/identities-tab.component.html
+++ b/src/app/clients/clients-view/identities-tab/identities-tab.component.html
@@ -19,7 +19,8 @@
         (click)="addIdentifier(true)"
         *midasHasPermission="'CREATE_CLIENTIDENTIFIER'"
       >
-        <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp; Add
+        <!-- <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp; Add -->
+        <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp; Thêm
       </button>
     </mat-card-header>
     <mat-card-content>
@@ -42,17 +43,17 @@
           </td>
         </ng-container>
         <ng-container matColumnDef="description">
-          <th mat-header-cell *matHeaderCellDef>Description</th>
+          <th mat-header-cell *matHeaderCellDef>Miêu tả</th>
           <td mat-cell *matCellDef="let identity">{{ identity.description }}</td>
         </ng-container>
 
         <ng-container matColumnDef="type">
-          <th mat-header-cell *matHeaderCellDef>type</th>
+          <th mat-header-cell *matHeaderCellDef>Loại</th>
           <td mat-cell *matCellDef="let identity">{{ identity.documentType.name }}</td>
         </ng-container>
 
         <ng-container matColumnDef="documents">
-          <th mat-header-cell *matHeaderCellDef>Identity Documents</th>
+          <th mat-header-cell *matHeaderCellDef>Hình ảnh/văn bản đính kèm</th>
           <td mat-cell *matCellDef="let identity; let i = index">
             <div *ngFor="let document of identity.documents">
               {{ document.name }}
@@ -72,7 +73,7 @@
         </ng-container>
 
         <ng-container matColumnDef="status">
-          <th mat-header-cell *matHeaderCellDef>Status</th>
+          <th mat-header-cell *matHeaderCellDef>Trạng thái</th>
           <td mat-cell *matCellDef="let identity">
             {{ identity.status === "clientIdentifierStatusType.active" ? "active" : "inactive" }}
           </td>
@@ -93,7 +94,7 @@
         (click)="addIdentifier(false)"
         *midasHasPermission="'CREATE_CLIENTIDENTIFIER'"
       >
-        <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp; Add
+        <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp; Thêm
       </button>
     </mat-card-header>
     <mat-card-content>
@@ -103,7 +104,7 @@
           <td mat-cell *matCellDef="let identity">{{ identity.id }}</td>
         </ng-container>
         <ng-container matColumnDef="documentKey">
-          <th mat-header-cell *matHeaderCellDef>Document Key</th>
+          <th mat-header-cell *matHeaderCellDef>Số thẻ</th>
           <td mat-cell *matCellDef="let identity; let i = index">
             {{ identity.documentKey }}
             <fa-icon
@@ -120,17 +121,17 @@
           </td>
         </ng-container>
         <ng-container matColumnDef="description">
-          <th mat-header-cell *matHeaderCellDef>Description</th>
+          <th mat-header-cell *matHeaderCellDef>Thông tin thẻ</th>
           <td mat-cell *matCellDef="let identity">{{ identity.description }}</td>
         </ng-container>
 
         <ng-container matColumnDef="type">
-          <th mat-header-cell *matHeaderCellDef>type</th>
+          <th mat-header-cell *matHeaderCellDef>Loại</th>
           <td mat-cell *matCellDef="let identity">{{ identity.documentType.name }}</td>
         </ng-container>
 
         <ng-container matColumnDef="documents">
-          <th mat-header-cell *matHeaderCellDef>Identity Documents</th>
+          <th mat-header-cell *matHeaderCellDef>Hình ảnh/văn bản đính kèm</th>
           <td mat-cell *matCellDef="let identity; let i = index">
             <div *ngFor="let document of identity.documents">
               {{ document.name }}
@@ -150,14 +151,14 @@
         </ng-container>
 
         <ng-container matColumnDef="status">
-          <th mat-header-cell *matHeaderCellDef>Status</th>
+          <th mat-header-cell *matHeaderCellDef>Trạng thái</th>
           <td mat-cell *matCellDef="let identity">
             {{ identity.status === "clientIdentifierStatusType.active" ? "active" : "inactive" }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef>Actions</th>
+          <th mat-header-cell *matHeaderCellDef>Hành động</th>
           <td mat-cell *matCellDef="let identity; let i = index">
             <button
               class="identity-action-button"
