--- a/src/app/clients/clients-view/notes-tab/notes-tab.component.html
+++ b/src/app/clients/clients-view/notes-tab/notes-tab.component.html
@@ -1,6 +1,6 @@
 <div class="tab-container mat-typography">
 
-  <h3>Notes</h3>
+  <h3>Ghi chú</h3>
 
   <div>
     
@@ -11,8 +11,8 @@
         <textarea formControlName="note" matInput placeholder="Write a note ...."></textarea>
       </mat-form-field>
 
-      <button mat-raised-button fxFlex color="primary" [disabled]="!noteForm.valid" *midasHasPermission="'CREATE_CLIENTNOTE'">
-        <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp; Add
+      <button mat-raised-button fxFlex color="primary" [disabled]="!noteForm.valid" *midasHasPermission="'CREATE_CLIENTNOTE'" matTooltip="Thêm ghi chú">
+        <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp; Thêm
       </button>
 
     </form>
@@ -25,8 +25,8 @@
       <fa-icon icon="sticky-note" matListIcon></fa-icon>
       <h3 matLine>{{clientNote.note}} </h3>
       <p matLine>
-        <span>Created by: {{clientNote.createdByUsername}}</span><br />
-        <span>Date: {{clientNote.createdOn | date}}</span>
+        <span>Tạo bởi: {{clientNote.createdByUsername}}</span><br />
+        <span>Ngày: {{clientNote.createdOn | date}}</span>
       </p>
       <div fxLayout="row" fxLayoutAlign="flex-start">
         <button mat-button color="primary" (click)="editNote(clientNote.id,clientNote.note,i)" *midasHasPermission="'CREATE_CLIENTNOTE'">
