add param common
add param common

--- a/src/app/terminals/transfer-terminal/transfer-terminal.component.html
+++ b/src/app/terminals/transfer-terminal/transfer-terminal.component.html
@@ -2,9 +2,9 @@
 <div class="container">
 
   <mat-card *ngIf="isTF; else templateError">
-    
+
     <form [formGroup]="transferTerminalForm">
-        
+
       <mat-card-content>
         <h3 class="mat-h3" fxFlexFill>{{'Terminal_Component.FormTransfer.labelTransfer'|translate}}</h3>
         <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
@@ -23,7 +23,7 @@
             <mat-label>{{'Terminal_Component.FormTransfer.labelOffice'|translate}}</mat-label>
             <input matInput required readonly formControlName="officeName">
           </mat-form-field>
-  
+
           <mat-form-field  fxFlex="98%">
               <mat-label>{{'Terminal_Component.FormTransfer.labelLimitRemain'|translate}}</mat-label>
               <input matInput readonly required formControlName="limitRemain" type="number">
@@ -32,19 +32,19 @@
           <mat-form-field *ngIf="transferTerminalForm.contains('officeId')" fxFlex="98%">
             <mat-label>{{'Terminal_Component.FormTransfer.labelOfficeToTransfer'|translate}}</mat-label>
             <mat-select required formControlName="officeId">
-                <mat-option *ngFor="let office of offices" [value]="office.id">
+                <mat-option *ngFor="let office of offices" [value]="office.officeId">
                   {{ office.name }}
                 </mat-option>
-            </mat-select> 
-            <mat-error *ngIf="transferTerminalForm.controls.officeId.hasError('required')" 
+            </mat-select>
+            <mat-error *ngIf="transferTerminalForm.controls.officeId.hasError('required')"
                   [innerHTML]="'Terminal_Component.transferTerminalForm.labelRequired' |translate"></mat-error>
           </mat-form-field>
 
-        </div> 
-         
+        </div>
+
       </mat-card-content>
 
-       
+
     <mat-card-content>
       <div style="text-align: center">
       <button mat-raised-button color="primary" (click)="submit()">
@@ -56,7 +56,7 @@
     </form>
 
   </mat-card>
-  
+
   <ng-template #templateError>
     {{'Terminal_Component.FormTransfer.msgErrorLimitDaily'|translate}}
   </ng-template>
