--- a/src/app/clients/client-stepper/client-general-step/client-general-step.component.html
+++ b/src/app/clients/client-stepper/client-general-step/client-general-step.component.html
@@ -123,11 +123,11 @@
 
           <div fxFlex="48%" fxLayout="column"  class="custom-files-input">
             <mat-label
-              for="file">CMND mặt trước <span style="color: red;">*</span></mat-label>
+              for="file">CMND mặt trước </mat-label>
             <input
               placeholder="CMND mặt trước"
               type="file"
-              required
+               
               accept="image/*"
               (change)="fileChangeBefore($event)"
             >
@@ -137,11 +137,11 @@
           </div>
           <div fxFlex="48%" fxLayout="column" class="custom-files-input">
             <mat-label
-              for="file">CMND mặt sau <span style="color: red;">*</span></mat-label>
+              for="file">CMND mặt sau </mat-label>
             <input
               placeholder="CMND mặt sau"
               type="file"
-              required
+               
               accept="image/*"
               (change)="fileChangeAfter($event)"
             >
@@ -273,7 +273,7 @@
       {{'Client_Component.ClientStepper.buttonPrevious' |translate}}
     </button>
     <button mat-raised-button
-            [disabled]="!createClientForm.valid || !clientFilesDataAfter || !clientFilesDataBefore"
+            [disabled]="!createClientForm.valid"
             matStepperNext>
       {{'Client_Component.ClientStepper.buttonNext' |translate}}&nbsp;&nbsp;
       <fa-icon icon="arrow-right"></fa-icon>
