--- a/src/app/groups/groups-view/group-actions/manage-group-members/manage-group-members.component.html
+++ b/src/app/groups/groups-view/group-actions/manage-group-members/manage-group-members.component.html
@@ -39,7 +39,6 @@
   <mat-card fxFlex="68%">
 
     <h3 matSubheader>Client Members</h3>
-    <h3 matSubheader>Chuyển cái này về dạng table có search giúp anh ! (JEAN)</h3>
 
     <mat-nav-list *ngIf="clientMembers?.length">
       <div mat-list-item *ngFor="let client of clientMembers index as i">
@@ -53,6 +52,38 @@
         </button>
       </div>
     </mat-nav-list>
+    
+    <div class="fix-table1-client">
+      <div fxLayout fxLayoutAlign="start center">
+        <mat-form-field fxFlex="40%">
+          <input matInput type="text" (keyup)="doFilterGroupClients($event.target.value)" placeholder="Filter">
+        </mat-form-field>
+      </div>
+      <table mat-table [dataSource]="dataSource"
+        class="mat-elevation-z1 m-b-30 ">
+        <ng-container matColumnDef="Name">
+          <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.Name' |translate}} </th>
+          <td mat-cell *matCellDef="let element">
+            <i class="fa fa-stop" [ngClass]="element.status.code|statusLookup" [matTooltip]="element.status.value"></i>
+            {{element.displayName}}
+          </td>
+        </ng-container> 
+        <ng-container matColumnDef="Action">
+          <th mat-header-cell *matHeaderCellDef> Thao tác</th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-icon-button color="primary" (click)="showClientDetail(element)">
+              <fa-icon icon="eye"></fa-icon>
+            </button>
+            <button mat-icon-button color="warn" (click)="removeClient(i, client)">
+              <fa-icon icon="trash"></fa-icon>
+            </button>
+          </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"class="select-row"></tr>
+      </table>
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    </div>
 
   </mat-card>
 
